--- a/.vscode/teamMembersSection.css
+++ b/.vscode/teamMembersSection.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Quicksand', sans-serif;
-    background-color: #dbeaf8;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     display: flex;
@@ -25,7 +25,7 @@ body {
 }
 
 .team-card {
-    background-color: #9EF4D0;
+    background-color: #A6FFDA;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -35,12 +35,11 @@ body {
 }
 
 .team-card img {
-    border-radius: 50%;
-    width: 100%;
-    height: 150px;
+    width: 200px;
+    height: 150px;;
     object-fit: cover;
 }
 
 h2, p {
-    color: #000;
+    color: #054863;
 }
