--- a/dashboard.css
+++ b/dashboard.css
@@ -153,6 +153,48 @@ body {
   display: flex;
   justify-content: center;
 }
+/* Add this CSS to your existing styles for sidebar */
+
+#sidebar .side-menu .has-submenu ul {
+  display: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#sidebar .side-menu .has-submenu i.bx-chevron-down {
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+#sidebar .side-menu .has-submenu:hover i.bx-chevron-down {
+  transform: rotate(-180deg);
+}
+
+#sidebar .side-menu .has-submenu:hover a {
+  color: var(--blue);
+}
+
+#sidebar .side-menu .has-submenu.active ul {
+  display: block;
+}
+#sidebar .side-menu .has-submenu li a .bx {
+  min-width: calc(60px - ((4px + 6px) * 2));
+  display: flex;
+  justify-content: center;
+}
+#sidebar .side-menu .has-submenu li a {
+  width: 100%;
+  height: 100%;
+  background: var(--light);
+  display: flex;
+  align-items: center;
+  border-radius: 48px;
+  font-size: 16px;
+  color: var(--dark);
+  white-space: nowrap;
+  overflow-x: hidden;
+}
 /* SIDEBAR */
 
 /* CONTENT */
@@ -565,3 +607,118 @@ body {
     min-width: 420px;
   }
 }
+.highlight {
+  background-color: yellow;
+}  /* Styling for the notification menu */
+.notification-menu {
+  display: none;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  z-index: 1000;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.notification-menu p {
+  margin: 5px 0;
+}
+
+/* Styling for the notification icon */
+.notification-icon {
+  position: relative;
+}
+
+.notification-icon .num {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: #fff;
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
+  display: none;
+}
+/* Existing styles remain unchanged */
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 1200px) {
+  #sidebar {
+    width: 220px;
+  }
+  #content {
+    width: calc(100% - 220px);
+    left: 220px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  #sidebar {
+    width: 200px;
+  }
+  #content {
+    width: calc(100% - 200px);
+    left: 200px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #sidebar {
+    width: 160px;
+  }
+  #content {
+    width: calc(100% - 160px);
+    left: 160px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #sidebar {
+    width: 100%;
+    display: none;
+  }
+  #sidebar.hide {
+    width: 100%;
+  }
+  #content {
+    width: 100%;
+    left: 0;
+  }
+  #content nav .nav-link {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #sidebar.hide {
+    display: block;
+  }
+  #content {
+    width: calc(100% - 60px);
+    left: 60px;
+  }
+  #content nav form .form-input input {
+    display: block;
+  }
+  #content nav form .form-input button {
+    width: 36px;
+    height: 100%;
+    border-radius: 0 36px 36px 0;
+    color: var(--light);
+    background: var(--red);
+  }
+  #content nav form.show .form-input button {
+    background: transparent;
+    color: var(--dark);
+  }
+  #content nav form.show ~ .notification,
+  #content nav form.show ~ .profile {
+    display: block;
+  }
+}
+
+/* Existing styles remain unchanged */
